@@ -8,19 +8,22 @@ package com.calmio.calm.integration.Helpers;
 import com.calmio.calm.integration.data.HTTPResponseData;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.net.URI;
+import java.net.MalformedURLException;
 import java.net.URISyntaxException;
+import java.net.URL;
+import java.util.Arrays;
+import java.util.Base64;
 import org.apache.http.auth.AuthScope;
 import org.apache.http.client.CredentialsProvider;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.impl.client.BasicCredentialsProvider;
 import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClientBuilder;
-import org.apache.commons.httpclient.UsernamePasswordCredentials;
+import org.apache.http.auth.UsernamePasswordCredentials;
 import org.apache.http.auth.Credentials;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.entity.StringEntity;
+import org.apache.http.impl.client.HttpClients;
 
 /**
  *
@@ -32,15 +35,18 @@ public class HTTPHandler {
 
     // HTTP GET request
     public static HTTPResponseData sendGet(String url, String username, String pwd) throws Exception {
-        CloseableHttpClient client = HttpClientBuilder.create()
+        CloseableHttpClient client = HttpClients.custom()
                 .setDefaultCredentialsProvider(getCredentialsProvider(url, username, pwd))
                 .build();
 
         int responseCode = 0;
         StringBuffer respo = null;
+        String userPassword = username + ":" + pwd;
+        String encoding = Base64.getEncoder().encodeToString(userPassword.getBytes());
 
         try {
             HttpGet request = new HttpGet(url);
+            request.addHeader("Authorization", "Basic " + encoding);
             request.addHeader("User-Agent", USER_AGENT);
             System.out.println("Executing request " + request.getRequestLine());
             CloseableHttpResponse response = client.execute(request);
@@ -70,20 +76,24 @@ public class HTTPHandler {
 
     public static HTTPResponseData sendPost(String url, String body, String username, String pwd) throws Exception {
 
-        CloseableHttpClient client = HttpClientBuilder.create()
+        CloseableHttpClient client = HttpClients.custom()
                 .setDefaultCredentialsProvider(getCredentialsProvider(url, username, pwd))
                 .build();
 
         int responseCode = 0;
         StringBuffer respo = null;
+        String userPassword = username + ":" + pwd;
+        String encoding = Base64.getEncoder().encodeToString(userPassword.getBytes());
 
         try {
             HttpPost request = new HttpPost(url);
+            request.addHeader("Authorization", "Basic " + encoding);
             request.addHeader("User-Agent", USER_AGENT);
             request.addHeader("Accept-Language", "en-US,en;q=0.5");
             request.addHeader("Content-Type", "application/json; charset=UTF-8");
             request.setHeader("Accept", "application/json");
             System.out.println("Executing request " + request.getRequestLine());
+            System.out.println("Executing request " + Arrays.toString(request.getAllHeaders()));
             StringEntity se = new StringEntity(body);
             request.setEntity(se);
             CloseableHttpResponse response = client.execute(request);
@@ -111,9 +121,9 @@ public class HTTPHandler {
         return result;
     }
 
-    private static CredentialsProvider getCredentialsProvider(String url, String user, String pwd) throws URISyntaxException {
+    private static CredentialsProvider getCredentialsProvider(String url, String user, String pwd) throws URISyntaxException, MalformedURLException {
         CredentialsProvider credsProvider = new BasicCredentialsProvider();
-        URI uri = new URI(url);
+        URL uri = new URL(url);
         String domain = uri.getHost();
         domain = domain.startsWith("www.") ? domain.substring(4) : domain;
         credsProvider.setCredentials(new AuthScope(domain, uri.getPort()), (Credentials) new UsernamePasswordCredentials(user, pwd));
